fixed overflow bug on for price

--- a/src/components/items.css
+++ b/src/components/items.css
@@ -42,3 +42,10 @@ img {
   font-size: 1.5rem;
   margin-top: 0.5rem;
 }
+
+@media screen and (min-width:750px){
+
+.selected-item-price {
+  max-width: 6vw;
+  }
+}
